// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`JoinTable > should match snapshot for auto join table 1`] = `
{
  "appendOnly": false,
  "cache": null,
  "checks": [],
  "defaultOrder": null,
  "embeddedLists": [],
  "entity": {
    "comment": null,
    "decorator": "Entity",
    "name": "JoinTableDeveloper",
    "namespace": null,
  },
  "extras": [],
  "fields": [
    {
      "arrayType": null,
      "collation": null,
      "comment": null,
      "computed": null,
      "decorator": "Field",
      "default": null,
      "embedded": null,
      "encrypted": null,
      "enum": null,
      "hideOn": [],
      "key": "id",
      "max": null,
      "min": null,
      "name": "id",
      "nullable": false,
      "order": null,
      "precision": null,
      "readonly": true,
      "scale": null,
      "schema": null,
      "transform": null,
      "type": "uuid",
    },
    {
      "arrayType": null,
      "collation": null,
      "comment": null,
      "computed": null,
      "decorator": "Field",
      "default": null,
      "embedded": null,
      "encrypted": null,
      "enum": null,
      "hideOn": [],
      "key": "name",
      "max": null,
      "min": null,
      "name": "name",
      "nullable": false,
      "order": null,
      "precision": null,
      "readonly": false,
      "scale": null,
      "schema": null,
      "transform": null,
      "type": "string",
    },
  ],
  "filters": [],
  "generated": [
    {
      "key": "id",
      "length": null,
      "max": null,
      "min": null,
      "strategy": "uuid",
    },
  ],
  "hooks": [],
  "indexes": [],
  "inheritance": null,
  "primaryKeys": [
    "id",
  ],
  "relationCounts": [],
  "relationIds": [],
  "relations": [
    {
      "findKeys": {
        "joinTableDeveloperId": "id",
      },
      "foreignConstructor": [Function],
      "foreignKey": "developers",
      "joinKeys": {
        "joinTableDeveloperId": "id",
      },
      "joinTable": "join_table_developer_x_join_table_skill",
      "key": "skills",
      "options": {
        "deferrable": false,
        "initiallyDeferred": false,
        "loading": {
          "multiple": "ignore",
          "single": "ignore",
        },
        "nullable": false,
        "onDestroy": "ignore",
        "onInsert": "ignore",
        "onOrphan": "ignore",
        "onSoftDestroy": "ignore",
        "onUpdate": "ignore",
        "strategy": null,
      },
      "orderBy": null,
      "type": "ManyToMany",
    },
  ],
  "schemas": [],
  "scopeKeys": [],
  "target": [Function],
  "uniques": [],
  "versionKeys": [],
}
`;

exports[`JoinTable > should match snapshot for custom join table name 1`] = `
{
  "appendOnly": false,
  "cache": null,
  "checks": [],
  "defaultOrder": null,
  "embeddedLists": [],
  "entity": {
    "comment": null,
    "decorator": "Entity",
    "name": "JoinTableArticle",
    "namespace": null,
  },
  "extras": [],
  "fields": [
    {
      "arrayType": null,
      "collation": null,
      "comment": null,
      "computed": null,
      "decorator": "Field",
      "default": null,
      "embedded": null,
      "encrypted": null,
      "enum": null,
      "hideOn": [],
      "key": "id",
      "max": null,
      "min": null,
      "name": "id",
      "nullable": false,
      "order": null,
      "precision": null,
      "readonly": true,
      "scale": null,
      "schema": null,
      "transform": null,
      "type": "uuid",
    },
    {
      "arrayType": null,
      "collation": null,
      "comment": null,
      "computed": null,
      "decorator": "Field",
      "default": null,
      "embedded": null,
      "encrypted": null,
      "enum": null,
      "hideOn": [],
      "key": "title",
      "max": null,
      "min": null,
      "name": "title",
      "nullable": false,
      "order": null,
      "precision": null,
      "readonly": false,
      "scale": null,
      "schema": null,
      "transform": null,
      "type": "string",
    },
  ],
  "filters": [],
  "generated": [
    {
      "key": "id",
      "length": null,
      "max": null,
      "min": null,
      "strategy": "uuid",
    },
  ],
  "hooks": [],
  "indexes": [],
  "inheritance": null,
  "primaryKeys": [
    "id",
  ],
  "relationCounts": [],
  "relationIds": [],
  "relations": [
    {
      "findKeys": {
        "joinTableArticleId": "id",
      },
      "foreignConstructor": [Function],
      "foreignKey": "articles",
      "joinKeys": {
        "joinTableArticleId": "id",
      },
      "joinTable": "article_tags",
      "key": "tags",
      "options": {
        "deferrable": false,
        "initiallyDeferred": false,
        "loading": {
          "multiple": "ignore",
          "single": "ignore",
        },
        "nullable": false,
        "onDestroy": "ignore",
        "onInsert": "ignore",
        "onOrphan": "ignore",
        "onSoftDestroy": "ignore",
        "onUpdate": "ignore",
        "strategy": null,
      },
      "orderBy": null,
      "type": "ManyToMany",
    },
  ],
  "schemas": [],
  "scopeKeys": [],
  "target": [Function],
  "uniques": [],
  "versionKeys": [],
}
`;
